force-app/main/default/objects/Opportunity/fields/DevNet_Access_Issue__c.field-meta.xml
<CustomField>
    <fullName>DevNet_Access_Issue__c</fullName>
    <description>Ticket opened to request devnet access</description>
    <label>DevNet Access Issue #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>