force-app/main/default/objects/Opportunity/fields/DevNet_Tool_Order__c.field-meta.xml
<CustomField>
    <fullName>DevNet_Tool_Order__c</fullName>
    <description>Ticket opened to request devtools</description>
    <label>DevNet Tool Order #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>