force-app/main/default/objects/Opportunity/fields/Exclusivity_Terms__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Terms__c</fullName>
    <label>Exclusivity Terms</label>
    <type>TextArea</type>
</CustomField>