force-app/main/default/objects/Opportunity/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <inlineHelpText>How is the company funded?
Does the partner have credibility in the market?</inlineHelpText>
    <label>Financial</label>
    <type>TextArea</type>
</CustomField>