force-app/main/default/objects/Opportunity/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <inlineHelpText>Game Franchise in which the advertised product belongs to.</inlineHelpText>
    <label>Game Franchise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>