force-app/main/default/objects/Opportunity/fields/Freewheel_Advertiser_ID__c.field-meta.xml
<CustomField>
    <fullName>Freewheel_Advertiser_ID__c</fullName>
    <description>Advertiser ID in Freewheel</description>
    <formula>Account.Freewheel_ID__c</formula>
    <inlineHelpText>Advertiser ID in Freewheel</inlineHelpText>
    <label>Freewheel Advertiser ID</label>
    <type>Text</type>
</CustomField>