force-app/main/default/objects/Opportunity/fields/Freewheel_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Freewheel_Agency_ID__c</fullName>
    <description>Agency ID in Freewheel</description>
    <formula>Agency_Name__r.Freewheel_ID__c</formula>
    <inlineHelpText>Agency ID in Freewheel</inlineHelpText>
    <label>Freewheel Agency ID</label>
    <type>Text</type>
</CustomField>