force-app/main/default/objects/Opportunity/fields/FY19_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FY19_Total_Revenue__c</fullName>
    <formula>Q1_FY19__c + Q2_FY19_Forecast__c + Q3_FY19_Forecast__c + Q4_FY19_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rolled up from Opportunity Product</inlineHelpText>
    <label>FY19 Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>