force-app/main/default/objects/Opportunity/fields/FY20_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FY20_Total_Revenue__c</fullName>
    <formula>Q1_FY20_Forecast__c + Q2_FY20_Forecast__c+ Q3_FY20_Forecast__c+ Q4_FY20_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rolled up from Opportunity Product</inlineHelpText>
    <label>FY20 Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>