force-app/main/default/objects/Opportunity/fields/Game_Genre__c.field-meta.xml
<CustomField>
    <fullName>Game_Genre__c</fullName>
    <label>Game Genre 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>App_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Card cattle</fullName>
            </value>
            <value>
                <fullName>Card collection</fullName>
            </value>
            <value>
                <fullName>Endless runner</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>Match 3</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Platformer</fullName>
            </value>
            <value>
                <fullName>Puzzle</fullName>
            </value>
            <value>
                <fullName>RPG</fullName>
            </value>
            <value>
                <fullName>RTS</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>TBS</fullName>
            </value>
            <value>
                <fullName>Time management</fullName>
            </value>
            <value>
                <fullName>Word</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>