force-app/main/default/objects/Opportunity/fields/IfLeapYear__c.field-meta.xml
<CustomField>
    <fullName>IfLeapYear__c</fullName>
    <formula>IF(OR(MOD( $Setup.User_Selected_Year__c.User_Selected_FY__c +1 ,400)=0,
AND(
MOD($Setup.User_Selected_Year__c.User_Selected_FY__c +1,4)=0,
MOD($Setup.User_Selected_Year__c.User_Selected_FY__c +1,100)&lt;&gt;0
)
),29,28)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IfLeapYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>