force-app/main/default/objects/Opportunity/fields/Jul_2020_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Jul_2020_Accrual__c</fullName>
    <description>Rolled up from July 2020 amount on Opportunity Product</description>
    <label>Jul 2020 Accrual</label>
    <summarizedField>OpportunityLineItem.July_2020_for_rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>