force-app/main/default/objects/Opportunity/fields/Jun_2020_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Jun_2020_Accrual__c</fullName>
    <description>Jun 2020 Forecast from Opportunity Products rolled up to Opportunity level</description>
    <label>Jun 2020 Accrual</label>
    <summarizedField>OpportunityLineItem.Jun_2020_for_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>