force-app/main/default/objects/Opportunity/fields/License_fee__c.field-meta.xml
<CustomField>
    <fullName>License_fee__c</fullName>
    <label>License fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>