force-app/main/default/objects/Opportunity/fields/License_Fee_waived__c.field-meta.xml
<CustomField>
    <fullName>License_Fee_waived__c</fullName>
    <label>License Fee waived</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>