force-app/main/default/objects/Opportunity/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <inlineHelpText>Does branding fit Playstation?
Does service conflict with other active services on platform?
Partner marketing commitment to Playstation?
Can partner sufficiently market the app?</inlineHelpText>
    <label>Marketing</label>
    <type>TextArea</type>
</CustomField>