force-app/main/default/objects/Opportunity/fields/May_2020_Accrual__c.field-meta.xml
<CustomField>
    <fullName>May_2020_Accrual__c</fullName>
    <description>May 2020 Forecast from Opportunity Products rolled up to Opportunity level</description>
    <inlineHelpText>May 2020 Forecast from Opportunity Products rolled up to Opportunity level</inlineHelpText>
    <label>May 2020 Accrual</label>
    <summarizedField>OpportunityLineItem.May_2020_for_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>