force-app/main/default/objects/Opportunity/fields/Minimum_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Guarantee__c</fullName>
    <inlineHelpText>Enter minimum guarantee</inlineHelpText>
    <label>Minimum Guarantee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>