force-app/main/default/objects/Opportunity/fields/Multi_Platform__c.field-meta.xml
<CustomField>
    <fullName>Multi_Platform__c</fullName>
    <label>Multi-Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PS3 + PSM</fullName>
            </value>
            <value>
                <fullName>PS3 + PS Vita</fullName>
            </value>
            <value>
                <fullName>PSM + PS Vita</fullName>
            </value>
            <value>
                <fullName>PSM + PS3 + PS Vita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>