force-app/main/default/objects/Opportunity/fields/NDA_BPAF_ACD__c.field-meta.xml
<CustomField>
    <fullName>NDA_BPAF_ACD__c</fullName>
    <description>BPAF or the ACD reference number</description>
    <label>NDA BPAF/ACD #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>