force-app/main/default/objects/Opportunity/fields/NDA_BPAF_ACD_Submitted__c.field-meta.xml
<CustomField>
    <fullName>NDA_BPAF_ACD_Submitted__c</fullName>
    <label>NDA BPAF/ACD Submitted</label>
    <type>Date</type>
</CustomField>