force-app/main/default/objects/Opportunity/fields/NDA_Type__c.field-meta.xml
<CustomField>
    <fullName>NDA_Type__c</fullName>
    <label>NDA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mutual Business</fullName>
            </value>
            <value>
                <fullName>Mutual Business and Mutual Tech NDA</fullName>
            </value>
            <value>
                <fullName>Mutual Business and One-Way Tech NDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>