force-app/main/default/objects/Opportunity/fields/Non_Game_App_Types__c.field-meta.xml
<CustomField>
    <fullName>Non_Game_App_Types__c</fullName>
    <label>Non-Game App Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>App_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Books &amp; Comics</fullName>
            </value>
            <value>
                <fullName>Communication (Text/Video/Voice)</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Health &amp; Fitness</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Navigation/GPS/LBS</fullName>
            </value>
            <value>
                <fullName>News &amp; Weather</fullName>
            </value>
            <value>
                <fullName>Novelty</fullName>
            </value>
            <value>
                <fullName>Photography (Browsing/Sharing)</fullName>
            </value>
            <value>
                <fullName>Podcasts</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Ringtones</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Social Networking</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Themes</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Web Browsers</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>