force-app/main/default/objects/Opportunity/fields/Number_of_Days_Running__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Running__c</fullName>
    <description>Calculates the # of days the campaign is running based on the Opportunity Start and End Date</description>
    <formula>Opportunity_End_Date__c -  Opportunity_Start_Date__c+1</formula>
    <inlineHelpText>Calculates the # of days the campaign is running based on the Opportunity Start and End Date</inlineHelpText>
    <label>Number of Days Running</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>