force-app/main/default/objects/Opportunity/fields/Number_of_Placements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Placements__c</fullName>
    <label>Number of Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>