force-app/main/default/objects/Opportunity/fields/of_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Products__c</fullName>
    <description>Rolled up count of Opportunity Products</description>
    <label># of Products</label>
    <summarizedField>OpportunityLineItem.N_of_Products__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>