force-app/main/default/objects/Opportunity/fields/Opportunity_SAP_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SAP_Status__c</fullName>
    <description>Checks whether an Opportunity has enough fields to be loaded into SAP for billing</description>
    <formula>if(or( isnull(AccountId), isblank( AdSales_CF_Contract_Id__c ),isblank( Campaign_ID__c), isblank( SAP_Customer_Num__c ),isnull(SAP_Customer_Num__c)) ,&quot;Not Ready for SAP&quot;, &quot;Ready for SAP&quot;)</formula>
    <inlineHelpText>If Opportunity&apos;s Account, Amount, FW Campaign ID, or SAP Customer Number is populated and there are placements in the opportunity and it&apos;s in Closed/Won stage, then it can be loaded into SAP.</inlineHelpText>
    <label>Opportunity SAP Readiness</label>
    <type>Text</type>
</CustomField>