force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>