force-app/main/default/objects/Opportunity/fields/Partner_BM__c.field-meta.xml
<CustomField>
    <fullName>Partner_BM__c</fullName>
    <label>Partner BM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sony_Partner__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Antony Clark</fullName>
            </value>
            <value>
                <fullName>Ashley Nutter</fullName>
            </value>
            <value>
                <fullName>Dwayne Benefield</fullName>
            </value>
            <value>
                <fullName>Hiroshi Yasukawa</fullName>
            </value>
            <value>
                <fullName>Jolene Colquhoun</fullName>
            </value>
            <value>
                <fullName>Jonathan Tate</fullName>
            </value>
            <value>
                <fullName>Leon Vanshelbaum</fullName>
            </value>
            <value>
                <fullName>Mark Patton</fullName>
            </value>
            <value>
                <fullName>Matthew Davies</fullName>
            </value>
            <value>
                <fullName>Nainan Shah</fullName>
            </value>
            <value>
                <fullName>Ramon Redondo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>