force-app/main/default/objects/Opportunity/fields/Partner_Marketing_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Marketing_Commitment__c</fullName>
    <label>Partner Marketing Commitment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>