force-app/main/default/objects/Opportunity/fields/Payment_and_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Payment_and_Reporting__c</fullName>
    <label>Payment and Reporting to SCEA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>