force-app/main/default/objects/Opportunity/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PS3</fullName>
            </value>
            <value>
                <fullName>PS4</fullName>
            </value>
            <value>
                <fullName>PSM</fullName>
            </value>
            <value>
                <fullName>PSVita</fullName>
            </value>
            <value>
                <fullName>PlayStation TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>