force-app/main/default/objects/Opportunity/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PlayStation®4</fullName>
            </value>
            <value>
                <fullName>PlayStation®Vita</fullName>
            </value>
            <value>
                <fullName>PlayStation®3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>