force-app/main/default/objects/Opportunity/fields/Platforms__c.field-meta.xml
<CustomField>
    <fullName>Platforms__c</fullName>
    <label>Platforms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSM</fullName>
            </value>
            <value>
                <fullName>PS3</fullName>
            </value>
            <value>
                <fullName>PS Vita</fullName>
            </value>
            <value>
                <fullName>PS4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>