force-app/main/default/objects/Opportunity/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Free to Play (F2P)</fullName>
            </value>
            <value>
                <fullName>In App Purchase (IAP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>