force-app/main/default/objects/Opportunity/fields/Pricing_and_Payments__c.field-meta.xml
<CustomField>
    <fullName>Pricing_and_Payments__c</fullName>
    <description>Consumer retail price and method of payment</description>
    <label>App Price and Customer Payment</label>
    <type>TextArea</type>
</CustomField>