force-app/main/default/objects/Opportunity/fields/Pricing_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tiers__c</fullName>
    <label>Pricing Tiers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>