force-app/main/default/objects/Opportunity/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <label>Product Information</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>