force-app/main/default/objects/Opportunity/fields/Projections__c.field-meta.xml
<CustomField>
    <fullName>Projections__c</fullName>
    <label>Projections</label>
    <type>TextArea</type>
</CustomField>