force-app/main/default/objects/Opportunity/fields/PS_Plus_Benefit__c.field-meta.xml
<CustomField>
    <fullName>PS_Plus_Benefit__c</fullName>
    <label>PS Plus Benefit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>